<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:hint="Business Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/primaryBusiness"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="Primary Business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="21dp"
        android:hint="Address"
        app:layout_constraintBottom_toTopOf="@+id/province"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primaryBusiness" />

    <EditText
        android:id="@+id/province"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:hint="Province"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="29dp"
        android:onClick="submitInfoButton"
        android:text="Create Business"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

</android.support.constraint.ConstraintLayout>
