...
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:hint="Province"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />
...
